--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="site-header">
-        <h1 class="site-logo"><img src="img/rogo.svg"> </h1>
+        <h1 class="site-logo"><img src="rogo.svg"> </h1>
         <nav>
             <ul class="site-nav">
                 <li>
