--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2 id="prf">ぷろふぃーる</h2>
         <div class="prf-dai">
             <div class="prf-face">
-                <img src="img/szi9.png" alt="ぽんのお顔">
+                <img src="szi9.png" alt="ぽんのお顔">
                 <dl>
                     <dt>ぽん</dt>
                     <dd>女の子と靴を描く事が大好きです。</dd>
