--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
     <main>
         <nav class="main-img">
-            <img src="img/szi1.png" alt="むきむきぽんちゃん">
+            <img src="szi1.png" alt="むきむきぽんちゃん">
         </nav>
         <h2 id="prf">ぷろふぃーる</h2>
         <div class="prf-dai">
@@ -49,51 +49,51 @@
                 </dl>
             </div>
             <div id="prf-szi">
-                <div class=prfa><img src="img/szi5.png" alt="ぽんのお靴"></div>
-                <div class=prfb><img src="img/szi6.png" alt="ぽんちゃん"></div>
-                <div class=prfc><img src="img/szi7.png" alt="ぽんの鞄"></div>
-                <div class=prfd><img src="img/szi8.png" alt="ぽんのスマホ"></div>
+                <div class=prfa><img src="szi5.png" alt="ぽんのお靴"></div>
+                <div class=prfb><img src="szi6.png" alt="ぽんちゃん"></div>
+                <div class=prfc><img src="szi7.png" alt="ぽんの鞄"></div>
+                <div class=prfd><img src="szi8.png" alt="ぽんのスマホ"></div>
             </div>
         </div>
         <h2 id="irust">いらすと</h2>
         <div id="irust-ico">
-            <img src="img/ico1.png" alt="ぽんちゃん">
-            <img src="img/ico2.png" alt="ぽりちゃん">
-            <img src="img/ico4.png" alt="有償依頼アイコン">
-            <img src="img/ico6.png" alt="有償依頼アイコン">
-            <img src="img/ico5.png" alt="有償依頼アイコン">
-            <img src="img/ico3.png" alt="あまいねぱんにゃ">
+            <img src="ico1.png" alt="ぽんちゃん">
+            <img src="ico2.png" alt="ぽりちゃん">
+            <img src="ico4.png" alt="有償依頼アイコン">
+            <img src="ico6.png" alt="有償依頼アイコン">
+            <img src="ico5.png" alt="有償依頼アイコン">
+            <img src="ico3.png" alt="あまいねぱんにゃ">
         </div>
         <div id="irust-ill">
-            <img src="img/ill2.png" alt="かわいいぽりちゃん">
-            <img src="img/ill1.png" alt="誕生日ぽりちゃん">
-            <img src="img/ill4.png" alt="有償依頼全身イラスト">
-            <img src="img/ill6.png" alt="有償依頼ペアイラスト">
-            <img src="img/ill3.png" alt="可愛いおぱんちゅ">
-            <img src="img/ill5.png" alt="かっこいいおぱんちゅ">
+            <img src="ill2.png" alt="かわいいぽりちゃん">
+            <img src="ill1.png" alt="誕生日ぽりちゃん">
+            <img src="ill4.png" alt="有償依頼全身イラスト">
+            <img src="ill6.png" alt="有償依頼ペアイラスト">
+            <img src="ill3.png" alt="可愛いおぱんちゅ">
+            <img src="ill5.png" alt="かっこいいおぱんちゅ">
         </div>
         <div id="irust-fanart">
-            <img src="img/fa1.png" alt="強風オールバックファンアート">
-            <img src="img/fa2.png" alt="ラヴィファンアート">
-            <img src="img/fa3.png" alt="きゅうくらりんファンアート">
-            <img src="img/fa4.png" alt="いーあるふぁんくらぶファンアート">
-            <img src="img/fa5.png" alt="ポケモンとぽりちゃん">
-            <img src="img/fa6.png" alt="ぽけもんとぽんちゃん">
+            <img src="fa1.png" alt="強風オールバックファンアート">
+            <img src="fa2.png" alt="ラヴィファンアート">
+            <img src="fa3.png" alt="きゅうくらりんファンアート">
+            <img src="fa4.png" alt="いーあるふぁんくらぶファンアート">
+            <img src="fa5.png" alt="ポケモンとぽりちゃん">
+            <img src="fa6.png" alt="ぽけもんとぽんちゃん">
         </div>
         <div id="irust-stg">
-            <img src="img/stg3.png" alt="ぽんちゃん設定資料">
-            <img src="img/stg2.png" alt="ぽりちゃん設定資料">
-            <img src="img/stg4.png" alt="有償依頼設定資料">
-            <img src="img/stg5.png" alt="有償依頼設定資料">
-            <img src="img/stg1.png" alt="有償依頼設定資料">
-            <img src="img/prf2.png" alt="ぽんちゃんゲームプロフィール">
-            <img src="img/prf1.png" alt="ぽりちゃんゲームプロフィール">
+            <img src="stg3.png" alt="ぽんちゃん設定資料">
+            <img src="stg2.png" alt="ぽりちゃん設定資料">
+            <img src="stg4.png" alt="有償依頼設定資料">
+            <img src="stg5.png" alt="有償依頼設定資料">
+            <img src="stg1.png" alt="有償依頼設定資料">
+            <img src="prf2.png" alt="ぽんちゃんゲームプロフィール">
+            <img src="prf1.png" alt="ぽりちゃんゲームプロフィール">
         </div>
         <h2 id="irai">有償依頼</h2>
         <div class="irai-ico">
             <dl>
                 <dt>ちょーお手軽<br>アイコン</dt>
-                <dd><img src="img/ico1.png" alt="ぽんちゃん"></dd>
+                <dd><img src="ico1.png" alt="ぽんちゃん"></dd>
                 <dd class="money">1,000~</dd>
             </dl>
             <div class="menu">
@@ -126,7 +126,7 @@
         <div class="irai-ill">
             <dl>
                 <dt>一枚絵</dt>
-                <dd><img src="img/a-ill4.png" alt="有償依頼全身イラスト"></dd>
+                <dd><img src="a-ill4.png" alt="有償依頼全身イラスト"></dd>
                 <dd class="money">5,000円~</dd>
             </dl>
             <div class="menu">
@@ -159,7 +159,7 @@
             <div class="irai-stg">
                 <dl>
                     <dt>設定資料<br>自己紹介カード</dt>
-                    <dd><img src="img/a-stg3.png" alt="ぽんちゃん設定資料"></dd>
+                    <dd><img src="a-stg3.png" alt="ぽんちゃん設定資料"></dd>
                     <dd class="money">10,000円~</dd>
                 </dl>
                 <div class="menu">
